--- a/Spring/day10_all/ajax-day01/src/main/webapp/ajax.html
+++ b/Spring/day10_all/ajax-day01/src/main/webapp/ajax.html
@@ -10,8 +10,7 @@ function getXhr(){
 		xhr = new XMLHttpRequest();
 	}else{
 		//ie浏览器
-		xhr = new ActiveXObject(
-				"MicroSoft.XMLHttp");
+		xhr = new ActiveXObject("MicroSoft.XMLHttp");
 	}
 	return xhr;
 }
