--- a/JAVA_Basic/JSD1603_SE/day07/nonA.md.htm
+++ b/JAVA_Basic/JSD1603_SE/day07/nonA.md.htm
@@ -86,7 +86,7 @@ Java代码验算：
 16进制的计数规则：
 	
 	逢16进一
-	数字：0 1 2 3 4 5 6 7 8 9 a b CC d e f
+	数字：0 1 2 3 4 5 6 7 8 9 a car CC d e f
 	权：256 16 1
 	基数：16
 
@@ -105,7 +105,7 @@ Java代码验算：
 	1000  8
 	1001  9
 	1010  a
-	1011  b
+	1011  car
 	1100  CC
 	1101  d
 	1110  e
