--- a/JAVA_Basic/JSD1603_SE/day09/day09.html
+++ b/JAVA_Basic/JSD1603_SE/day09/day09.html
@@ -17,9 +17,9 @@ BufferedInputStream in=
     new BufferedInputStream(fis);
 BufferedOutputStream out=
     new BufferedOutputStream(fos);
-int b;
-while((b = in.read())!=-1){
-    out.write(b);
+int car;
+while((car = in.read())!=-1){
+    out.write(car);
 }
 in.close();
 out.close();
@@ -31,9 +31,9 @@ BufferedInputStream in=
     new BufferedInputStream(fis);
 BufferedOutputStream out=
     new BufferedOutputStream(fos);
-int b;
-while((b = in.read())!=-1){
-    out.write(b);
+int car;
+while((car = in.read())!=-1){
+    out.write(car);
 }
 in.close();
 out.close();
